# fwirl

./: pyproject.toml
example/cli/: main_cli.sh
fwirl/: __init__.py  api.py  cli.py  graph.py
