[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fwirl"
version = "0.1.0"
dependencies = [
  "click",
]
requires-python = ">=3.9"
authors = [
  {name = "Trevor Campbell", email = "trevor.d.campbell@gmail.com"},
]
description = "A simple, lightweight workflow library for maintaining assets"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python"
]

[project.scripts]
fwirl = "fwirl.cli:cli"